# SlipperKernel

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  README.ru.md  todo.md
.cargo/: config.toml
arch/riscv64/: trap.S
core/: Cargo.toml
core/src/: errno.rs  fmt.rs  formats.rs  lib.rs  parser.rs  string.rs  types.rs
core/src/fmt/: impls.rs  mod.rs  writer.rs
core/src/formats/: header.rs  misc.rs  mod.rs  onyxfs_fmt.rs  segment.rs  snapshot.rs  tests.rs
core/tests/: integration.rs
docs/: architecture.md
drivers/: plic.c
fs/: fat32.c  vfs.c
include/: plic.h  proc.h  spx.h  syscall.h  timer.h
init/: Cargo.toml  build.rs  init.c  linker.ld
init/src/: argv_test.rs  auth.rs  login.rs  main.rs  osh.rs  passwd.rs  syscalls.rs  useradd.rs  userdel.rs
kernel/: Cargo.toml  linker.ld  main.c  syscall.c  timer.c  trap.c
kernel/src/: main.rs
kernel/src/arch/: asm.rs  csr.rs  mmio.rs  mod.rs  regs.rs  smp.rs  trap_frame.rs
kernel/src/drivers/: fb.rs  fb_term.rs  mod.rs  pci.rs  plic.rs  sdhci.rs  uart.rs  virtio.rs  virtio_req.rs
kernel/src/font/: mod.rs
kernel/src/fs/: fat32.rs  mod.rs  onyxfs.rs  vfs.rs
kernel/src/ipc/: channel.rs  mod.rs
kernel/src/kernel/: klog.rs  main.rs  timer.rs  trap.rs
kernel/src/libfdt/: fdt.rs
kernel/src/mm/: heap.rs  kalloc.rs  mod.rs  pmm.rs  vmm.rs
kernel/src/proc/: lifecycle.rs  mod.rs  onx.rs  proc.rs  process.rs  scheduler.rs  signals.rs  spawn.rs
kernel/src/srv/: kdump.rs  klog.rs  (+5 more)
proc/: proc.c  spx.c
scripts/: run_qemu.sh
tools/: Cargo.toml
tools/src/: elf2onx.rs  mkimage.rs  psfgen.rs
(+54 files in other folders)
