[workspace]
resolver = "2"
members = ["kernel", "core", "init", "tools"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
authors = ["loki5512344"]

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = false
codegen-units = 1
opt-level = 2
debug = true
overflow-checks = false
