[package]
name = "onyx_init"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "onyx-init"
path = "src/main.rs"

[[bin]]
name = "onyx-osh"
path = "src/osh.rs"

[[bin]]
name = "onyx-login"
path = "src/login.rs"

[[bin]]
name = "onyx-passwd"
path = "src/passwd.rs"

[[bin]]
name = "onyx-useradd"
path = "src/useradd.rs"

[[bin]]
name = "onyx-userdel"
path = "src/userdel.rs"

[[bin]]
name = "onyx-hello"
path = "src/hello.rs"

[[bin]]
name = "onyx-argv-test"
path = "src/argv_test.rs"
